.github/pr31-resolver-error.log
stage: test-after-patch
command: cargo test --all-features --locked
returncode: 101
--- stdout ---

--- stderr ---
    Updating crates.io index
 Downloading crates ...
  Downloaded cfg_aliases v0.2.1
  Downloaded find-msvc-tools v0.1.9
  Downloaded gio-sys v0.22.8
  Downloaded cc v1.2.67
  Downloaded gdk4 v0.11.4
  Downloaded serde_derive v1.0.228
  Downloaded quote v1.0.46
  Downloaded system-deps v7.0.8
  Downloaded proc-macro2 v1.0.106
  Downloaded rkyv v0.8.17
  Downloaded tinyvec_macros v0.1.1
  Downloaded toml_datetime v1.1.1+spec-1.1.0
  Downloaded target-lexicon v0.13.5
  Downloaded thread_local v1.1.10
  Downloaded zmij v1.0.22
  Downloaded thiserror v2.0.18
  Downloaded uuid v1.23.5
  Downloaded regex-automata v0.4.15
  Downloaded version-compare v0.2.1
  Downloaded utf8parse v0.2.2
  Downloaded winnow v1.0.3
  Downloaded zstd v0.13.3
  Downloaded toml_edit v0.25.12+spec-1.1.0
  Downloaded toml_writer v1.1.2+spec-1.1.0
  Downloaded unicode-ident v1.0.24
  Downloaded unsafe-libyaml v0.2.11
  Downloaded vte4 v0.10.0
  Downloaded thiserror-impl v2.0.18
  Downloaded tinyvec v1.12.0
  Downloaded toml_parser v1.1.2+spec-1.1.0
  Downloaded vte4-sys v0.10.0
  Downloaded bytecheck v0.8.2
  Downloaded toml v1.1.3+spec-1.1.0
  Downloaded zstd-safe v7.2.4
  Downloaded unicode-width v0.2.2
  Downloaded zstd-sys v2.0.16+zstd.1.5.7
  Downloaded anstyle-query v1.1.5
  Downloaded rancor v0.1.2
  Downloaded rustc_version v0.4.1
  Downloaded serde_spanned v1.1.1
  Downloaded gdk-pixbuf-sys v0.22.0
  Downloaded heck v0.5.0
  Downloaded munge v0.4.7
  Downloaded simdutf8 v0.1.5
  Downloaded env_logger v0.11.11
  Downloaded cairo-rs v0.22.0
  Downloaded fuzzy-matcher v0.3.7
  Downloaded semver v1.0.28
  Downloaded cfg-expr v0.20.8
  Downloaded munge_macro v0.4.7
  Downloaded serde_yaml v0.9.34+deprecated
  Downloaded defmt v1.1.1
  Downloaded graphene-sys v0.22.8
  Downloaded glib-sys v0.22.8
  Downloaded gsk4-sys v0.11.4
  Downloaded libadwaita-sys v0.9.2
  Downloaded memoffset v0.9.1
  Downloaded anstyle-parse v1.0.0
  Downloaded defmt-parser v1.0.0
  Downloaded ptr_meta_derive v0.3.1
  Downloaded regex-syntax v0.8.11
  Downloaded env_filter v2.0.0
  Downloaded futures-io v0.3.32
  Downloaded proc-macro-crate v3.5.0
  Downloaded serde v1.0.228
  Downloaded ryu v1.0.23
  Downloaded bytecheck_derive v0.8.2
  Downloaded cfg-if v1.0.4
  Downloaded gtk4-sys v0.11.4
  Downloaded pango-sys v0.22.0
  Downloaded colorchoice v1.0.5
  Downloaded itoa v1.0.18
  Downloaded slab v0.4.12
  Downloaded is_terminal_polyfill v1.70.2
  Downloaded pango v0.22.8
  Downloaded autocfg v1.5.1
  Downloaded bitflags v1.3.2
  Downloaded gdk-pixbuf v0.22.0
  Downloaded nix v0.31.3
  Downloaded graphene-rs v0.22.8
  Downloaded jobserver v0.1.35
  Downloaded shlex v2.0.1
  Downloaded anstream v1.0.0
  Downloaded log v0.4.33
  Downloaded gobject-sys v0.22.6
  Downloaded bitflags v2.13.0
  Downloaded futures-util v0.3.32
  Downloaded glib-macros v0.22.6
  Downloaded hashbrown v0.17.1
  Downloaded indexmap v2.14.0
  Downloaded serde_json v1.0.150
  Downloaded aho-corasick v1.1.4
  Downloaded gio v0.22.8
  Downloaded glib v0.22.8
  Downloaded gtk4 v0.11.4
  Downloaded pcre2-sys v0.2.10
  Downloaded jiff v0.2.32
  Downloaded equivalent v1.0.2
  Downloaded gtk4-macros v0.11.4
  Downloaded futures-task v0.3.32
  Downloaded serde_core v1.0.228
  Downloaded futures-executor v0.3.32
  Downloaded futures-channel v0.3.32
  Downloaded memchr v2.8.3
  Downloaded pkg-config v0.3.33
  Downloaded regex v1.13.0
  Downloaded gsk4 v0.11.4
  Downloaded defmt-macros v1.1.1
  Downloaded rend v0.5.4
  Downloaded field-offset v0.3.6
  Downloaded smallvec v1.15.2
  Downloaded anstyle v1.0.14
  Downloaded ptr_meta v0.3.1
  Downloaded cairo-sys-rs v0.22.0
  Downloaded rkyv_derive v0.8.17
  Downloaded libadwaita v0.9.2
  Downloaded gdk4-sys v0.11.4
  Downloaded pin-project-lite v0.2.17
  Downloaded bytes v1.12.1
  Downloaded futures-macro v0.3.32
  Downloaded io-lifetimes v2.0.4
  Downloaded futures-core v0.3.32
  Downloaded libc v0.2.186
  Downloaded syn v2.0.118
   Compiling pkg-config v0.3.33
   Compiling winnow v1.0.3
   Compiling toml_datetime v1.1.1+spec-1.1.0
   Compiling target-lexicon v0.13.5
   Compiling serde_spanned v1.1.1
   Compiling heck v0.5.0
   Compiling toml_parser v1.1.2+spec-1.1.0
   Compiling smallvec v1.15.2
   Compiling version-compare v0.2.1
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.46
   Compiling toml v1.1.3+spec-1.1.0
   Compiling unicode-ident v1.0.24
   Compiling libc v0.2.186
   Compiling memchr v2.8.3
   Compiling cfg-expr v0.20.8
   Compiling system-deps v7.0.8
   Compiling syn v2.0.118
   Compiling glib-sys v0.22.8
   Compiling gobject-sys v0.22.6
   Compiling gio-sys v0.22.8
   Compiling futures-core v0.3.32
   Compiling gdk-pixbuf-sys v0.22.0
   Compiling pango-sys v0.22.0
   Compiling cairo-sys-rs v0.22.0
   Compiling futures-task v0.3.32
   Compiling pin-project-lite v0.2.17
   Compiling slab v0.4.12
   Compiling bitflags v2.13.0
   Compiling futures-macro v0.3.32
   Compiling glib-macros v0.22.6
   Compiling futures-util v0.3.32
   Compiling futures-channel v0.3.32
   Compiling gdk4-sys v0.11.4
   Compiling graphene-sys v0.22.8
   Compiling jobserver v0.1.35
   Compiling find-msvc-tools v0.1.9
   Compiling shlex v2.0.1
   Compiling cc v1.2.67
   Compiling futures-executor v0.3.32
   Compiling glib v0.22.8
   Compiling gtk4-sys v0.11.4
   Compiling gsk4-sys v0.11.4
   Compiling futures-io v0.3.32
   Compiling serde_core v1.0.228
   Compiling semver v1.0.28
   Compiling autocfg v1.5.1
   Compiling hashbrown v0.17.1
   Compiling equivalent v1.0.2
   Compiling memoffset v0.9.1
   Compiling rustc_version v0.4.1
   Compiling indexmap v2.14.0
   Compiling field-offset v0.3.6
   Compiling toml_edit v0.25.12+spec-1.1.0
   Compiling zstd-sys v2.0.16+zstd.1.5.7
   Compiling ptr_meta_derive v0.3.1
   Compiling ptr_meta v0.3.1
   Compiling proc-macro-crate v3.5.0
   Compiling aho-corasick v1.1.4
   Compiling gio v0.22.8
   Compiling cairo-rs v0.22.0
   Compiling graphene-rs v0.22.8
   Compiling regex-syntax v0.8.11
   Compiling gtk4-macros v0.11.4
   Compiling gdk-pixbuf v0.22.0
   Compiling pango v0.22.8
   Compiling gdk4 v0.11.4
   Compiling regex-automata v0.4.15
   Compiling gsk4 v0.11.4
   Compiling rancor v0.1.2
   Compiling bytecheck_derive v0.8.2
   Compiling vte4-sys v0.10.0
   Compiling libadwaita-sys v0.9.2
   Compiling cfg-if v1.0.4
   Compiling cfg_aliases v0.2.1
   Compiling zmij v1.0.22
   Compiling simdutf8 v0.1.5
   Compiling io-lifetimes v2.0.4
   Compiling zstd-safe v7.2.4
   Compiling serde v1.0.228
   Compiling bytecheck v0.8.2
   Compiling nix v0.31.3
   Compiling gtk4 v0.11.4
   Compiling regex v1.13.0
   Compiling pcre2-sys v0.2.10
   Compiling serde_derive v1.0.228
   Compiling munge_macro v0.4.7
   Compiling itoa v1.0.18
   Compiling serde_json v1.0.150
   Compiling log v0.4.33
   Compiling munge v0.4.7
   Compiling rend v0.5.4
   Compiling thread_local v1.1.10
   Compiling rkyv_derive v0.8.17
   Compiling unsafe-libyaml v0.2.11
   Compiling toml_writer v1.1.2+spec-1.1.0
   Compiling ryu v1.0.23
   Compiling utf8parse v0.2.2
   Compiling anstyle-parse v1.0.0
   Compiling serde_yaml v0.9.34+deprecated
   Compiling rkyv v0.8.17
   Compiling fuzzy-matcher v0.3.7
   Compiling zstd v0.13.3
   Compiling anstyle v1.0.14
   Compiling anstyle-query v1.1.5
   Compiling unicode-width v0.2.2
   Compiling is_terminal_polyfill v1.70.2
   Compiling colorchoice v1.0.5
   Compiling anstream v1.0.0
   Compiling env_filter v2.0.0
   Compiling jiff v0.2.32
   Compiling env_logger v0.11.11
   Compiling vte4 v0.10.0
   Compiling libadwaita v0.9.2
   Compiling jterm4 v0.2.0 (/home/runner/work/jterm4/jterm4)
error[E0425]: cannot find function `build_clipboard_paste_payload` in this scope
    --> src/block_view/mod.rs:5321:13
     |
 229 | fn build_clipboard_paste(text: &str, bracketed_paste: bool) -> (String, Vec<u8>) {
     | -------------------------------------------------------------------------------- similarly named function `build_clipboard_paste` defined here
...
5321 |             build_clipboard_paste_payload("plain", false).as_slice(),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
help: a function with a similar name exists
     |
5321 -             build_clipboard_paste_payload("plain", false).as_slice(),
5321 +             build_clipboard_paste("plain", false).as_slice(),
     |

error[E0425]: cannot find function `build_clipboard_paste_payload` in this scope
    --> src/block_view/mod.rs:5325:13
     |
 229 | fn build_clipboard_paste(text: &str, bracketed_paste: bool) -> (String, Vec<u8>) {
     | -------------------------------------------------------------------------------- similarly named function `build_clipboard_paste` defined here
...
5325 |             build_clipboard_paste_payload("one\ntwo", true).as_slice(),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
help: a function with a similar name exists
     |
5325 -             build_clipboard_paste_payload("one\ntwo", true).as_slice(),
5325 +             build_clipboard_paste("one\ntwo", true).as_slice(),
     |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `jterm4` (lib test) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...

--- git status ---

